--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,92 +20,20 @@ add_library(libcu.${arch} STATIC
   libcu/stringcu.cu
   libcu/libcu.cu
   libcu/libcu.stdlib.cu
-
-  #libcu/crtdefscu.cu
-  #libcu/ctypecu.cu
-  #libcu/errnocu.cu
-  #libcu/regexcu.cu
-  #libcu/sentinel-gpu.cu
-  #libcu/setjmpcu.cu
-  #libcu/stdiocu.cu
-  #libcu/stdlibcu.cu
-  #libcu/timecu.cu
-  #libcu/unistdcu.cu
-  #libcu/direntcu.cu
-  #libcu/sys/statcu.cu
-  #libcu/sys/timecu.cu
-  #libcu/ext/hash.cu
-  #libcu/ext/memfile.cu
-  #libcu/grpcu.cu
-  #libcu/pwdcu.cu
-  #libcu/fsystem.cu
-  #libcu/fcntlcu.cu
   )
   set_source_files_properties(libcu/stringcu.cu libcu/libcu.cu PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS}")
 
-add_library(libcu.falloc.${arch} STATIC
-  libcu.falloc/libcu.falloc.cu
-  )
-
-add_library(libcu.fileutils.${arch} STATIC
-  libcu.fileutils/libcu.fileutils.cu
-  libcu.fileutils/sentinel-msg.cpp
-  )
-target_link_libraries(libcu.fileutils.${arch} PRIVATE libcu.${arch})
-
 # Request that libcu be built with -std=c++11. As this is a public compile feature anything that links to particles will also build with -std=c++11
 target_compile_features(libcu.${arch} PUBLIC cxx_std_11)
-target_compile_features(libcu.falloc.${arch} PUBLIC cxx_std_11)
-target_compile_features(libcu.fileutils.${arch} PUBLIC cxx_std_11)
 
 # We need to explicitly state that we need all CUDA files in the particle library to be built with -dc as the member functions could be called by other libraries and executables
 set_target_properties(libcu.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(libcu.falloc.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(libcu.fileutils.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
 if (M)
   set_target_properties(libcu.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
-  set_target_properties(libcu.falloc.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
-  set_target_properties(libcu.fileutils.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
 endif()
 
 
 # TCL
-add_library(libcu.jimtcl.${arch} STATIC
-  libcu.jimtcl/jim.cu
-  libcu.jimtcl/libcu.jimtcl.cu
-
-  #libcu.jimtcl/jim-interactive.cu
-  #libcu.jimtcl/init.cu
-  #libcu.jimtcl/jim-aio.cu
-  #libcu.jimtcl/jim-array.cu
-  #libcu.jimtcl/jim-clock.cu
-  #libcu.jimtcl/jim-eventloop.cu
-  #libcu.jimtcl/jim-exec.cu
-  #libcu.jimtcl/jim-file.cu
-  #libcu.jimtcl/jim-format.cu
-  #libcu.jimtcl/jim-gpu.cu
-  #libcu.jimtcl/jim-history.cu
-  #libcu.jimtcl/jim-load.cu
-  #libcu.jimtcl/jim-namespace.cu
-  #libcu.jimtcl/jim-pack.cu
-  #libcu.jimtcl/jim-package.cu
-  #libcu.jimtcl/jim-readdir.cu
-  #libcu.jimtcl/jim-regexp.cu
-  #libcu.jimtcl/jim-subcmd.cu
-  #_libcu.jimtcl/jim-tclprefix.cu
-  #libcu.jimtcl/jimex.cu
-  #libcu.jimtcl/utf8.cu
-  )
-  set_source_files_properties(libcu.jimtcl/jim.cu libcu.jimtcl/libcu.jimtcl.cu PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGSO2}")
-  target_compile_definitions(libcu.jimtcl.${arch} PRIVATE jim_ext_aio jim_ext_namespace jim_ext_package JIM_MAINTAINER JIM_REFERENCES)
-  target_link_libraries(libcu.jimtcl.${arch} PRIVATE libcu.${arch})
-
-include_directories(libcu.jimtcl)
-add_executable(jimtcl.${arch}
-	jimtcl/jimsh.cu
-  )
-  target_link_libraries(jimtcl.${arch} PRIVATE libcu.jimtcl.${arch})
-
 add_library(libcu.tinytcl.${arch} STATIC
   libcu.tinytcl/libcu.tinytcl.cu
 
@@ -137,98 +65,24 @@ add_library(libcu.tinytcl.${arch} STATIC
   #libcu.tinytcl/tclMod.cu
   )
   set_source_files_properties(libcu.tinytcl/libcu.tinytcl.cu PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGSO2}")
-  target_compile_definitions(libcu.jimtcl.${arch} PRIVATE TCL_MEM_DEBUG)
+  target_compile_definitions(libcu.tinytcl.${arch} PRIVATE TCL_MEM_DEBUG)
   target_link_libraries(libcu.tinytcl.${arch} PRIVATE libcu.${arch})
 
 include_directories(libcu.tinytcl)
 add_executable(tinytcl.${arch}
 	tinytcl/tinySh.cu
   )
-  target_link_libraries(tinytcl.${arch} PRIVATE libcu.jimtcl.${arch})
+  target_link_libraries(tinytcl.${arch} PRIVATE libcu.tinytcl.${arch})
 
 # Request that libcu be built with -std=c++11. As this is a public compile feature anything that links to particles will also build with -std=c++11
-target_compile_features(libcu.jimtcl.${arch} PUBLIC cxx_std_11)
-target_compile_features(jimtcl.${arch} PUBLIC cxx_std_11)
 target_compile_features(libcu.tinytcl.${arch} PUBLIC cxx_std_11)
 target_compile_features(tinytcl.${arch} PUBLIC cxx_std_11)
 
 # We need to explicitly state that we need all CUDA files in the particle library to be built with -dc as the member functions could be called by other libraries and executables
-set_target_properties(libcu.jimtcl.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(jimtcl.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(libcu.tinytcl.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(tinytcl.${arch} PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
 if (M)
-  set_target_properties(libcu.jimtcl.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
-  set_target_properties(jimtcl.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
   set_target_properties(libcu.tinytcl.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
   set_target_properties(tinytcl.${arch} PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64})
 endif()
 
-
-# TESTS
-if (BUILD_TESTING)
-  add_executable(libcu_tests
-	libcu.tests/libcu.tests.cu
-	libcu.tests/program.cu
-
-  #libcu.tests/crtdefsTest.cu
-  #libcu.tests/ctypeTest.cu
-  #libcu.tests/direntTest.cu
-  #libcu.tests/errnoTest.cu
-  #libcu.tests/fallocTest.cu
-  #libcu.tests/fcntlTest.cu
-  #libcu.tests/fsystemTest.cu
-  #libcu.tests/grpTest.cu
-  #libcu.tests/pwdTest.cu
-  #libcu.tests/regexTest.cu
-  #libcu.tests/sentinelTest.cu
-  #libcu.tests/setjmpTest.cu
-  #libcu.tests/stdargTest.cu
-  #libcu.tests/stddefTest.cu
-  #libcu.tests/stdioTest.cu
-  #libcu.tests/stdlibTest.cu
-  #libcu.tests/stringTest.cu
-  #libcu.tests/timeTest.cu
-  #libcu.tests/unistdTest.cu
-  )
-  set_source_files_properties(libcu.tests/libcu.tests.cu PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS}")
-
-  set_target_properties(libcu_tests PROPERTIES PREFIX "" CUDA_SEPARABLE_COMPILATION ON)
-  if (M)
-    set_target_properties(libcu_tests PROPERTIES COMPILE_FLAGS "-m${M}" LINK_FLAGS "-m${M}" CUDA_64_BIT_DEVICE_CODE ${C64} CUDA_SEPARABLE_COMPILATION ON)
-  endif()
-  target_link_libraries(libcu_tests PRIVATE libcu.fileutils.${arch} libcu.falloc.${arch})
-
-  add_test(NAME crtdefs_test1 COMMAND libcu_tests 1)
-  add_test(NAME ctype_test1 COMMAND libcu_tests 2)
-  add_test(NAME dirent_test1 COMMAND libcu_tests 3)
-  add_test(NAME errno_test1 COMMAND libcu_tests 4)
-  add_test(NAME falloc_lauched_cuda_kernel COMMAND libcu_tests 5)
-  add_test(NAME falloc_alloc_with_getchunk COMMAND libcu_tests 6)
-  add_test(NAME falloc_alloc_with_getchunks COMMAND libcu_tests 7)
-  add_test(NAME falloc_alloc_with_context COMMAND libcu_tests 8)
-  add_test(NAME fcntl_test1 COMMAND libcu_tests 9)
-  add_test(NAME grp_test1 COMMAND libcu_tests 10)
-  add_test(NAME pwd_test1 COMMAND libcu_tests 11)
-  add_test(NAME regex_test1 COMMAND libcu_tests 12)
-  add_test(NAME sentinel_test1 COMMAND libcu_tests 13)
-  add_test(NAME setjmp_test1 COMMAND libcu_tests 14)
-  add_test(NAME stdarg_parse COMMAND libcu_tests 15)
-  add_test(NAME stdarg_call COMMAND libcu_tests 16)
-  add_test(NAME stddef_test1 COMMAND libcu_tests 17)
-  add_test(NAME stdio_test1 COMMAND libcu_tests 18)
-  add_test(NAME stdio_64bit COMMAND libcu_tests 19)
-  add_test(NAME stdio_ganging COMMAND libcu_tests 20)
-  add_test(NAME stdio_scanf COMMAND libcu_tests 21)
-  add_test(NAME stdlib_test1 COMMAND libcu_tests 22)
-  add_test(NAME stdlib_strtol COMMAND libcu_tests 23)
-  add_test(NAME stdlib_strtoq COMMAND libcu_tests 24)
-  add_test(NAME string_test1 COMMAND libcu_tests 25)
-  add_test(NAME time_test1 COMMAND libcu_tests 26)
-  add_test(NAME unistd_test1 COMMAND libcu_tests 27)
-
-  if (APPLE)
-    # We need to add the default path to the driver (libcuda.dylib) as an rpath, so that the static cuda runtime can find it at runtime.
-    set_property(TARGET libcu_test PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
-  endif()
-endif()
