--- a/src/libcu.ext/libcu.ext.vcxproj
+++ b/src/libcu.ext/libcu.ext.vcxproj
@@ -24,7 +24,7 @@
     <ShortPlatform Condition="'$(Platform)'=='x64'">x64</ShortPlatform>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="vsystem-win.cpp" />
+    <ClCompile Include="vsystem-win.c" />
     <None Include="math.cu" />
     <None Include="pcache1.cu" />
     <None Include="printf.cu" />
