--- a/src/libcu.ext/libcu.ext.vcxproj
+++ b/src/libcu.ext/libcu.ext.vcxproj
@@ -24,6 +24,7 @@
     <ShortPlatform Condition="'$(Platform)'=='x64'">x64</ShortPlatform>
   </PropertyGroup>
   <ItemGroup>
+    <ClCompile Include="vsystem-unix.c" />
     <ClCompile Include="vsystem-win.c" />
     <None Include="math.cu" />
     <None Include="pcache1.cu" />
@@ -47,6 +48,9 @@
     <None Include="mutex-noop.cu" />
     <None Include="mutex.cu" />
     <None Include="pcache.cu" />
+    <None Include="main.more.cu">
+      <FileType>Document</FileType>
+    </None>
     <CudaCompile Include="program.cu" />
     <CudaCompile Include="libcu.ext.cu" />
     <ClCompile Include="mutex-unix.cpp" />
